Add function to accept order creating a relationship with deliveryman
