# app/Http/Controllers/Api/Deliveryman/OrderController.php
@@ -407,4 +407,77 @@ class OrderController extends Controller
                                  'data'    => $data ?? null 
                                 ], $statusCode ?? 404); 
     }
+
+    /**
+     * GET THE SPECIFIED ORDER 
+     * *
+     * 
+     * @OA\Get(path="/api/v1/deliveryman/orders/{id}/accept",
+     *   tags={"Deliveryman: Orders"},
+     *   summary="Get/Accept the specified order",
+     *   description="Make the Deliveryman responsible for delivering the specified Order",
+     *   operationId="deliverymanGetOrder",
+     *   @OA\Parameter(
+     *      name="id",
+     *      description="Order id",
+     *      required=true,
+     *      in="path",
+     *      @OA\Schema(
+     *          type="integer"
+     *      )
+     *   ),
+     *   @OA\Response(
+     *      response=200,
+     *      description="Success",
+     *      @OA\MediaType(
+     *           mediaType="application/json",
+     *           example= {
+     *               "status": "success",
+     *               "message": "Pedido aceito",
+     *           }
+     *      ),
+     *   ),
+     *   @OA\Response(
+     *      response=401,
+     *      description="Unauthenticated"
+     *   ),
+     *   @OA\Response(
+     *      response=400, 
+     *      description="Bad request"
+     *   ),
+     *   @OA\Response(
+     *      response=404,
+     *      description="Not found"
+     *   ),
+     *   @OA\Response(
+     *      response=403,
+     *      description="Forbidden"
+     *   ),
+     *   security={
+     *     {"api_key": {}}
+     *   }
+     * )
+     *
+     * @return \Illuminate\Http\Response
+     */
+    public function acceptOrder($id)
+    {
+        #   Check if the Order is related with any deliveryman 
+        if (Order::where('id', $id )->doesntHave('deliverymen')->get()->count() > 0) {
+
+            DeliverymanOrder::create([
+                'deliveryman_id'                => Auth::user()->deliveryman->id, 
+                'order_id'                      => $id,
+                'order_delivery_status_type_id' => 1
+            ]);
+
+            $status     = "success";
+            $message    = "Pedidos aceito"; 
+            $statusCode = 200;
+        }
+
+        return response()->json(['status'  => $status  ?? 'not found',
+                                 'message' => $message ?? 'Não foi possível aceitar o pedido especificado!',
+                                ], $statusCode ?? 404); 
+    }
 }
