# storage/api-docs/api-docs.json
@@ -1925,6 +1925,57 @@
                 ]
             }
         },
+        "/api/v1/deliveryman/orders/{id}/accept": {
+            "get": {
+                "tags": [
+                    "Deliveryman: Orders"
+                ],
+                "summary": "Get/Accept the specified order",
+                "description": "Make the Deliveryman responsible for delivering the specified Order",
+                "operationId": "deliverymanGetOrder",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "Order id",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Success",
+                        "content": {
+                            "application/json": {
+                                "example": {
+                                    "status": "success",
+                                    "message": "Pedido aceito"
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "400": {
+                        "description": "Bad request"
+                    },
+                    "404": {
+                        "description": "Not found"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    }
+                },
+                "security": [
+                    {
+                        "api_key": []
+                    }
+                ]
+            }
+        },
         "/api/v1/contents": {
             "get": {
                 "tags": [
